--- a/etc/web-pages/Signup.html.slim
+++ b/etc/web-pages/Signup.html.slim
@@ -2,7 +2,7 @@
 
 	h1	Sign Up
 	
-	-- if (flash.msgExists)
+	/*-- if (flash.msgExists)
 		div.flashMsg ${flash.msg}
 
 	form (action="${signUpUrl}" method="post")
