--- a/etc/web-pages/user/UserLogin.html.slim
+++ b/etc/web-pages/user/UserLogin.html.slim
@@ -2,7 +2,7 @@
 
 	h1	Login
 	
-	-- if (flash.msgExists)
+	/*-- if (flash.msgExists)
 		div.flashMsg ${flash.msg}
 
 	form (action="${loginUrl}" method="post")
