Prettier signup page

--- a/etc/web-components/Layout.slim
+++ b/etc/web-components/Layout.slim
@@ -1,10 +1,12 @@
 doctype html
-html (xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg")
+html (xmlns:svg="http://www.w3.org/2000/svg")
 	head
 		title ${pageTitle}
 
 		// http://getbootstrap.com/css/#overview-mobile
-		meta#viewport (name="viewport" content="initial-scale=1.0")
+		meta (charset="utf-8")
+		meta (http-equiv="X-UA-Compatible" content="IE=edge")
+		meta (name="viewport" content="initial-scale=1")
 
 		// Atom Feed
 		// link (rel="alternate" type="application/atom+xml" title="Fantom Factory" href="/feeds/all")
