--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -44,3 +44,18 @@
 
 /* ---- Bootstrap Overrides --------------------------------------------------------------------- */
 
+body {
+	padding-top:		@navbar-height + @navbar-margin-bottom;
+}
+
+.form-group input:valid {
+    color:			@state-success-text;
+    border-color:	@state-success-text;
+    .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+
+	&:focus {
+		border-color:	darken(@state-success-text, 10%);
+		@shadow:		inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten(@state-success-text, 20%);
+		.box-shadow(@shadow);
+	}
+}
