--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -1,7 +1,5 @@
 -- app.renderLayout("Home")
 
-	h1.text-center
-		div.title
-			span.blend		| Inspiring Next Generation Programmers		
+	h1.page-header.text-center	Pod Repository		
 
 	
