--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -1,3 +1,14 @@
+form input:valid {
+    color:			@state-success-text;
+    border-color:	@state-success-text;
+    .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+
+	&:focus {
+		border-color:	darken(@state-success-text, 10%);
+		@shadow:		inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten(@state-success-text, 20%);
+		.box-shadow(@shadow);
+	}
+}
 
 @import "bootstrap-3.3.4/bootstrap.less";
 
