--- a/etc/web-components/TopNavBar.slim
+++ b/etc/web-components/TopNavBar.slim
@@ -25,8 +25,7 @@ nav.navbar.navbar-default.navbar-fixed-top
 						li;	a (href="#")	Separated link
 						li;	a (href="#")	One more separated link
 			ul.nav.navbar-nav.navbar-right
-				li;			a (href="#")	Sign Up
-				li;			a (href="#")	Login
-				/*li.active;	a (href="#")	Fixed top
-					span.sr-only()	(current)
+				li;			a (href="${pageUrl(SignupPage#)}")	Sign Up
+				li;			a (href="${pageUrl(LoginPage#)}")	Login
+
 
