--- a/etc/web-pages/Signup.html.slim
+++ b/etc/web-pages/Signup.html.slim
@@ -6,7 +6,7 @@
 		div.flashMsg ${flash.msg}
 
 	div.col-md-4
-		form (action="${signUpUrl}" method="post" novalidate)
+		form (action="${signUpUrl}" method="post")
 			== formBean.renderErrors
 			== formBean.renderBean(signUpDetails)
 			div.pull-right
