--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -2,4 +2,21 @@
 
 	h1.page-header.text-center	Pod Repository		
 
-	
+	div.h1.text-center
+		p.small Libraries for the Fantom Language are called pods. 
+		p.small This is a repository of pods.
+		
+	h2	Core Features
+	ul
+		li	You can <b>publish pods</b>. Pods may be:
+			ul
+				li	<b>Public</b> - anybody access them 
+				li	<b>Private</b> - only you can access them
+		li	You can <b>download pods</b>. Pods may be: 
+			ul
+				li	<b>Downloaded</b> manually on this website or 
+				li	<b>Installed</b> with the <a href="http://fantom.org/doc/docFanr/Tool">fanr</a> command line tool.
+		li	You can view <b>pod documentation</b>. This site contains both: 
+			ul
+				li	<b>User Guides</b> and
+				li	<b>API</b> documentation.
