--- a/etc/web-pages/Login.html.slim
+++ b/etc/web-pages/Login.html.slim
@@ -1,13 +1,17 @@
 -- app.renderLayout("Login")
 
-	h1.page-header	Login
+	div.col-sm-offset-1.col-md-offset-2.col-sm-10.col-md-8
+		h1.page-header	Login
 	
-	/*-- if (flash.msgExists)
-		div.flashMsg ${flash.msg}
-
-	div.col-md-4
-		form (action="${loginUrl}" method="post")
+	div.col-sm-offset-3.col-md-offset-4.col-sm-6.col-md-4
+		form.clearfix (action="${loginUrl}" method="post")
 			== formBean.renderErrors
 			== formBean.renderBean(loginDetails)
 			div.pull-right
+				//a.btn.btn-link (href="${pageUrl(SignupPage#)}") Sign Up
 				button.btn.btn-primary (type="submit" name="login") Login
+
+		p	&nbsp;
+		p	Not registered? Then 
+			a (href="${pageUrl(SignupPage#)}") Sign Up
+			| !
