--- a/etc/web-pages/Signup.html.slim
+++ b/etc/web-pages/Signup.html.slim
@@ -1,13 +1,17 @@
 -- app.renderLayout("Sign Up")
 
-	h1.page-header	Sign Up
+	div.col-sm-offset-1.col-md-offset-2.col-sm-10.col-md-8
+		h1.page-header	Sign Up
 	
-	/*-- if (flash.msgExists)
-		div.flashMsg ${flash.msg}
-
-	div.col-md-4
-		form (action="${signUpUrl}" method="post")
+	div.col-sm-offset-3.col-md-offset-4.col-sm-6.col-md-4
+		form.clearfix (action="${signUpUrl}" method="post")
 			== formBean.renderErrors
 			== formBean.renderBean(signUpDetails)
 			div.pull-right
+				//a.btn.btn-link (href="${pageUrl(LoginPage#)}") Login
 				button.btn.btn-primary (type="submit" name="signUp") Sign Up!
+
+		p	&nbsp;
+		p.clearfix	Already registered? Then 
+			a (href="${pageUrl(LoginPage#)}") Login
+			| !
