Empty pod pages

--- a/etc/web-components/Layout.slim
+++ b/etc/web-components/Layout.slim
@@ -43,5 +43,6 @@ html (xmlns:svg="http://www.w3.org/2000/svg")
 		main#${pageId}.container
 			-- renderBody
 
+		p &nbsp;
 		-- app.renderFatFooter
 	
