--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -11,8 +11,9 @@ nav.navbar.navbar-default.navbar-fixed-top
 
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
-				li;			a (href="#")	Pods
+				== pageLink(PodsPage#,	"Pods")
+
 			ul.nav.navbar-nav.navbar-right
-				li; 		a (href="#")	Help
+				//li; 		a (href="#")	Help
 				== pageLink(SignupPage#,	"Sign Up")
 				== pageLink(LoginPage#,		"Login")
