--- a/etc/web-pages/Pods.html.slim
+++ b/etc/web-pages/Pods.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout("Pods")
+-- app.renderLayout("My Pods")
 
 	h1.page-header	Pods
 
@@ -16,3 +16,4 @@
 				th	${pod.builtOn}
 				th	${downloads(pod)}
 				th	${pod.meta.summary}
+		
