--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -48,4 +48,20 @@ body {
 	padding-top:		@navbar-height + @navbar-margin-bottom;
 }
 
+// form-okay prevents invalid forms from appearing green when first rendered!
+form.form-okay input:valid {
+    color:			@state-success-text;
+    border-color:	@state-success-text;
+    .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
 
+	&:focus {
+		border-color:	darken(@state-success-text, 10%);
+		@shadow:		inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten(@state-success-text, 20%);
+		.box-shadow(@shadow);
+	}
+}
+
+// see http://getbootstrap.com/css/#firefox-and-fieldsets
+@-moz-document url-prefix() {
+	fieldset { display: table-cell; }
+}
