--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -6,6 +6,7 @@
 		p	You have no pods! Why don't you try uploading one?
 	
 	-- else
+		p	You have ${allPods.size} pods.
 		div.table-responsive
 			table.table.table-striped.table-condensed
 				tr
