--- a/etc/web-pages/Pods.html.slim
+++ b/etc/web-pages/Pods.html.slim
@@ -2,18 +2,18 @@
 
 	h1.page-header	Pods
 
-	table.table.table-striped.table-hover.table-condensed.table-responsive
-		tr
-			th	Name
-			th	Version
-			th	Updated On
-			th	Downloads
-			th	Summary
-		-- allPods.each |pod|
+	div.table-responsive
+		table.table.table-striped.table-condensed
 			tr
-				th	${pod.name}
-				th	${pod.version}
-				th	${pod.builtOn}
-				th	${downloads(pod)}
-				th	${pod.meta.summary}
-		
+				th	Name
+				th	Version
+				th	Built On
+				th	Downloads
+				th	Summary
+			-- allPods.each |pod|
+				tr
+					td	${pod.name}
+					td	${pod.version}
+					td	${pod.builtOn.toLocale("DDD MMM YYYY")}
+					td	${downloads(pod)}
+					td	${pod.meta.summary}
