--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -7,11 +7,11 @@ nav.navbar.navbar-default.navbar-fixed-top
 				span.icon-bar
 				span.icon-bar
 				span.icon-bar
-			a.navbar-brand (href="${pageUrl(IndexPage#)}")	Pod Repo
+			a.navbar-brand (href="${pageUrl(IndexPage#)}")	Fantom Pod Repo
 
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
-				== pageLink(PodsPage#,	"Pods")
+				== pageLink(PodsPage#,	"Browse Pods")
 
 			ul.nav.navbar-nav.navbar-right
 				//li; 		a (href="#")	Help
