--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -1,22 +1,29 @@
 -- app.renderLayout("Home")
 
-	h1.page-header.text-center	Pod Repository		
+	h1.page-header.text-center	Fantom Pod Repository		
 
 	div.h1.text-center
 		p.small Libraries for the Fantom Language are called pods. 
 		p.small This is a repository of pods.
 		
-	h2	Core Features
-	ul
-		li	You can <b>publish pods</b>. Pods may be:
+	div.row
+		div.col-sm-6.col-md-4
+			h2.text-center	Publish Pods
+			p	Pods may be:
 			ul
 				li	<b>Public</b> - anybody access them 
 				li	<b>Private</b> - only you can access them
-		li	You can <b>download pods</b>. Pods may be: 
+
+		div.col-sm-6.col-md-4
+			h2.text-center	Download Pods
+			p	Pods may be: 
 			ul
 				li	<b>Downloaded</b> manually on this website or 
 				li	<b>Installed</b> with the <a href="http://fantom.org/doc/docFanr/Tool">fanr</a> command line tool.
-		li	You can view <b>pod documentation</b>. This site contains both: 
+
+		div.col-sm-6.col-md-4
+			h2.text-center	View Pod Docs
+			p	This site contains both: 
 			ul
 				li	<b>User Guides</b> and
 				li	<b>API</b> documentation.
