--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -1,9 +1,9 @@
--- app.renderLayout("Pods")
+-- app.renderLayout("My Pods")
 
-	h1.page-header	Pods
+	h1.page-header	My Pods
 
 	-- if (allPods.isEmpty)
-		p	You have no pods! Why don't you try uploading one?
+		p	You have no pods! Why don't you upload one?
 	
 	-- else
 		p	You have ${allPods.size} pods.
