--- a/etc/web-pages/my/MyDetails.html.slim
+++ b/etc/web-pages/my/MyDetails.html.slim
@@ -1,3 +1,12 @@
 -- app.renderLayout("My Details")
 
 	h1.page-header	My Details
+
+	div.row
+		div.col-sm-6
+	
+			form (action="${saveUrl}" method="post")
+				== formBean.renderErrors
+				== formBean.renderBean(user)
+				div.pull-right
+					button.btn.btn-primary (type="submit" name="save") Save
