--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -6,7 +6,7 @@
 		p	You have no pods! Why don't you upload one?
 	
 	-- else
-		p	You have ${allPods.size} pods.
+		p	You have ${allPods.size} pod(s).
 		div.table-responsive
 			table.table.table-striped.table-condensed
 				tr
