--- a/etc/web-pages/PodSummary.html.slim
+++ b/etc/web-pages/PodSummary.html.slim
@@ -1,3 +1,8 @@
 -- app.renderLayout("Pods")
 
-	h1.page-header	${pod.name} v${pod.version}
+	div.page-header
+		h1	${pod.meta.projectName} v${pod.version}
+		div.h1
+			span.small	${pod.meta.summary}
+
+	== aboutPod
