--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -15,13 +15,16 @@
 					th	Built On
 					th	Downloads
 					th	Summary
+					th	Docs
 				-- allPods.each |pod|
 					tr
-						td	${pod.name}
+						td;	a (href="${podSummaryUrl(pod)}") ${pod.name}
+						// / ${pod.meta.projectName}
 						td	${pod.version}
 						td	${pod.builtOn.toLocale("DDD MMM YYYY")}
 						td	${downloads(pod)}
 						td	${pod.meta.summary}
+						td;	a (href="${podDocsUrl(pod)}") Documentation
 
 
 
