--- a/etc/web-components/Layout.slim
+++ b/etc/web-components/Layout.slim
@@ -35,7 +35,7 @@ html (xmlns:svg="http://www.w3.org/2000/svg")
 		// -- afGa.renderGoogleAnalytics
 
 	body
-		-- if (isLoggedIn)
+		-- if (loggedIn)
 			-- app.renderTopNavBarPrivate
 		-- else
 			-- app.renderTopNavBarPublic
