--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -3,10 +3,11 @@
 @import "bootstrap-3.3.4/theme.less";
 
 @import "global.less";
+@import "api.less";
+@import "syntax.less";
 
 //@import "components/layout.less";
 //@import "components/topNavBar.less";
 
 //@import "pages/indexPage.less";
 
-@import "syntax.less";
