Deprecated and Internal tags

--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -22,7 +22,7 @@
 						// / ${pod.meta.projectName}
 						td	${pod.version}
 						td	${pod.builtOn.toLocale("DDD MMM YYYY")}
-						td	${pod.meta.summary}
+						td	${pod.summary}
 						td	${downloads(pod)}
 						td;	a (href="${podDocsUrl(pod)}") Documentation
 
