Fandoc URI classes

--- a/etc/less/api.less
+++ b/etc/less/api.less
@@ -1,19 +1,7 @@
 
-.api.type {
+.api {
 	a {
 		text-decoration: underline;
-	}
-
-	h1 > span:first-child {
-		display:		block;
-		color:			#4c697e;
-		font-size:		60%;
-		font-weight:	normal;
-	}
-
-	h1 {
-		color:			#3d6ba0;
-		font-weight:	bold;
 	}
 	
 	dd {
