--- a/etc/web-components/DocTypeRefTemplate.slim
+++ b/etc/web-components/DocTypeRefTemplate.slim
@@ -28,6 +28,11 @@
 	== ref.isNullable ? "?" : ""
 
 -- else
-	a (href="${resolveUri}")
+	-- if (resolved)
+		a (href="${typeUrl}")
+			== full ? ref.qname : ref.name
+			== ref.isNullable ? "?" : ""
+	-- else
 		== full ? ref.qname : ref.name
 		== ref.isNullable ? "?" : ""
+		
