--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -1,6 +1,6 @@
 
-nav.navbar.navbar-default.navbar-fixed-top
-	div.container
+header.navbar.navbar-default.navbar-fixed-top
+	nav.container
 		div.navbar-header
 			button.navbar-toggle.collapsed (type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar")
 				span.sr-only	Toggle navigation
