--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -4,7 +4,13 @@
 		div.pull-right
 			a.btn.btn-primary (href="${pages[MyDetailsPage#].pageUrl.encode}") Edit User Details
 
-	h1.page-header	User ${user.userName}
+	div.row
+		article.col-sm-9
+			h1.podHeading
+				span	user
+				== ${user.userName}
 
-	div email:		${user.email}
-	div username:	${user.userName}
+			div email:		${user.email}
+			div username:	${user.userName}
+
+		nav.col-sm-3.hidden-xs.contents
