--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -8,9 +8,11 @@
 		article.col-sm-9
 			h1.podHeading
 				span	user
-				== ${user.userName}
+				== user.userName
 
 			div email:		${user.email}
 			div username:	${user.userName}
+			div image:
+				img (src="${user.gravatarUrl}")
 
 		nav.col-sm-3.hidden-xs.contents
