Better list / ToC styling

--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -7,7 +7,7 @@
 
 ol, ul {
 	// better than the Firefox default of 40px!
-	padding-left:	@padding-large-horizontal;
+	padding-left:	@padding-large-horizontal * 2;
 }
 
 .brokenLink {
