--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -11,7 +11,7 @@ header.navbar.navbar-default.navbar-fixed-top
 
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
-				== pageLink(PodsPage#,	"Browse Pods")
+				== pageLink(PodsPage#,	"All Pods")
 
 			ul.nav.navbar-nav.navbar-right
 				//li; 		a (href="#")	Help
