Document link errors

--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -40,8 +40,8 @@ ol, ul {
 
 .podHeading {
 	color:			#3d6ba0;
-	font-weight:	bold;
-	margin-bottom:	@line-height-computed;
+	padding-bottom:	@line-height-computed * 0.5;
+	margin-bottom:	@line-height-computed * 1.5;
 	border-bottom:	1px solid @page-header-border-color;
 
 	> span:first-child {
