--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -4,6 +4,7 @@
 
 @import "global.less";
 @import "api.less";
+@import "fandoc.less";
 @import "syntax.less";
 
 //@import "components/layout.less";
