--- a/etc/web-components/Layout.slim
+++ b/etc/web-components/Layout.slim
@@ -53,3 +53,6 @@ html (xmlns:svg="http://www.w3.org/2000/svg")
 
 		p &nbsp;
 		-- app.renderFatFooter
+
+		-- if (googleAnalyticsEnabled)
+			-- afGa.renderGoogleAnalytics
