--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -1,6 +1,11 @@
 -- app.renderLayout("My Pods")
 
-	h1.page-header	My Pods
+	ol.breadcrumb
+		li.active	My Pods
+
+	h1.podHeading
+		span	my
+		| Pods
 
 	-- if (allPods.isEmpty)
 		p	You have no pods! Why don't you upload one?
@@ -13,15 +18,17 @@
 					th	Name
 					th	Version
 					th	Built On
+					th	
 					th	Summary
 					th	Documentation
-					th.text-centre	Doc Errors
+					th.text-nowrap.text-centre	Doc Errors
 					th	Actions
 				-- allPods.each |pod|
-					tr
+					tr (class="${pod.isPublic ? "" : "info"}")
 						td.text-nowrap;	a (href="${podSummaryUrl(pod)}") ${pod.name}
 						td.text-nowrap	${pod.version}
 						td.text-nowrap	${pod.builtOn.toLocale("DDD MMM YYYY")}
+						td.text-nowrap;	== pod.isPublic ? "Public" : "Private"
 						td				${pod.summary}
 						td.text-nowrap;	== podDocsHtml(pod)
 						td.text-centre;
@@ -56,4 +63,4 @@
 
 				div.pull-right
 					button.btn.btn-primary (type="submit" name="upload") Upload
-					
+			
