google anal done done

--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout("User ${user.screenName}")
+-- app.renderLayout(true, "User ${user.screenName}")
 
 	ol.breadcrumb
 		li.active	Users
