--- a/etc/web-pages/Signup.html.slim
+++ b/etc/web-pages/Signup.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout("Sign Up")
+-- app.renderLayout(true, "Sign Up")
 
 	div.row
 		div.col-sm-offset-1.col-md-offset-2.col-sm-10.col-md-8
