Refactored the way pod meta data is stored

--- a/etc/web-pages/help/HelpPublish.html.slim
+++ b/etc/web-pages/help/HelpPublish.html.slim
@@ -32,7 +32,13 @@
 		p	Public pods, because they're exposed to everyone, carry a few restrictions. Namely they need to define the following pod meta:
 		
 		ul
-			li	summary
-			li	repo.public
-			li	license.name 
-			li	vcs.uri or org.uri 
+			li	<code>pod.summary</code>
+			li	<code>repo.public</code>
+			li	<code>licence.name</code> or <code>license.name</code>
+			li	<code>vcs.uri</code> or <code>org.uri</code>
+		 
+		 
+		 
+		h2 Pod Meta
+		
+		Pod Repo makes us of the following pod meta:
