--- a/etc/web-pages/Login.html.slim
+++ b/etc/web-pages/Login.html.slim
@@ -15,6 +15,6 @@
 					button.btn.btn-primary (type="submit" name="login") Login
 	
 			p	&nbsp;
-			p	Not registered? Then 
+			p.pull-right	Not registered? Then 
 				a (href="${pageUrl(SignupPage#)}") Sign Up
 				| !
