--- a/etc/web-pages/Signup.html.slim
+++ b/etc/web-pages/Signup.html.slim
@@ -15,6 +15,6 @@
 					button.btn.btn-primary (type="submit" name="signUp") Sign Up!
 	
 			p	&nbsp;
-			p.clearfix	Already registered? Then 
+			p.pull-right	Already registered? Then 
 				a (href="${pageUrl(LoginPage#)}") Login
 				| !
