--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -17,18 +17,18 @@
 				tr
 					th	Name
 					th	Version
-					th	Built On
-					th	
+					th.text-nowrap	Built On
+					th.text-centre	Public
 					th	Summary
 					th	Documentation
 					th.text-nowrap.text-centre	Doc Errors
 					th	Actions
 				-- allPods.each |pod|
-					tr (class="${pod.isPublic ? "" : "info"}")
+					tr
 						td.text-nowrap;	a (href="${podSummaryUrl(pod)}") ${pod.name}
 						td.text-nowrap	${pod.version}
 						td.text-nowrap	${pod.builtOn.toLocale("DDD MMM YYYY")}
-						td.text-nowrap;	== pod.isPublic ? "Public" : "Private"
+						td.text-centre;	== pod.isPublic ? "\u2611" : "" // "\u2610";
 						td				${pod.summary}
 						td.text-nowrap;	== podDocsHtml(pod)
 						td.text-centre;
