Deprecated and Internal flags now do something!

--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -63,6 +63,7 @@ body {
 code {
 	color:				#080;
 	background-color:	inherit;
+	padding:			0px 2px;
 }
 
 // form-okay prevents invalid forms from appearing green when first rendered!
