Pretty users page

--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -45,7 +45,7 @@ ol, ul {
 	margin-bottom:	@line-height-computed * 1.5;
 	border-bottom:	1px solid @page-header-border-color;
 
-	> span:first-child {
+	> span {
 		display:		block;
 		color:			#4c697e;
 		font-size:		60%;
