--- a/etc/web-components/TopNavBarPrivate.slim
+++ b/etc/web-components/TopNavBarPrivate.slim
@@ -20,6 +20,7 @@ header.navbar.navbar-default.navbar-fixed-top
 						span.caret
 					ul.dropdown-menu (role="menu")
 						== pageLink(HelpPublishPage#,	"Publishing Pods")
+						== pageLink(HelpFanrPage#,		"Using fanr")
 						== pageLink(HelpFandocPage#,	"Writing Documentation")
 						//li.dropdown-header	Nav header
 						//li.divider
