Better page titles

--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(true, "User ${user.screenName}")
+-- app.renderLayout(true, "${user.screenName} :: User")
 
 	ol.breadcrumb
 		li.active	Users
