--- a/etc/web-pages/help/HelpFandoc.html.slim
+++ b/etc/web-pages/help/HelpFandoc.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(true, "Fandoc :: Help")
+-- app.renderLayout(true, "Writing Documentation :: Help")
 
 	ol.breadcrumb
 		li.active	Help
