--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(false, "My Pods")
+-- app.renderLayout(false, "My Pods" + (allPods.isEmpty ? "" : " (${allPods.size})"))
 
 	ol.breadcrumb
 		li.active	My Pods
