--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(true, "Home")
+-- app.renderLayout(true, "Fantom Pod Repository")
 
 	h1.page-header.text-center	Fantom Pod Repository		
 
