--- a/etc/web-pages/help/HelpPublish.html.slim
+++ b/etc/web-pages/help/HelpPublish.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(true, "Publish :: Help")
+-- app.renderLayout(true, "Publishing Pods :: Help")
 
 	ol.breadcrumb
 		li.active	Help
