--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -21,7 +21,7 @@
 					th.text-centre	Public
 					th	Summary
 					th	Documentation
-					th.text-nowrap.text-centre	Doc Errors
+					th.text-nowrap.text-centre	Doc Errs
 					th	Actions
 				-- allPods.each |pod|
 					tr
