--- a/etc/web-components/TopNavBarPrivate.slim
+++ b/etc/web-components/TopNavBarPrivate.slim
@@ -24,5 +24,5 @@ header.navbar.navbar-default.navbar-fixed-top
 						== pageLink(HelpFandocPage#,	"Writing Documentation")
 						//li.dropdown-header	Nav header
 						//li.divider
-				== userLink("My Details")
+				== userLink(loggedInUser.screenName)
 				li; a (href="${pageUrl(LogoutPage#)}")	Logout
