--- a/etc/web-components/Layout.slim
+++ b/etc/web-components/Layout.slim
@@ -9,7 +9,10 @@ html (xmlns:svg="http://www.w3.org/2000/svg")
 		meta (name="viewport" content="initial-scale=1")
 
 		// Atom Feed
-		// link (rel="alternate" type="application/atom+xml" title="Fantom Factory" href="/feeds/all")
+		link (rel="alternate" type="application/atom+xml" title="Fantom Pod Respository" href="/pods/feed.atom")
+		
+		link (rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
+		
 
 		/* http://realfavicongenerator.net/
 			link (rel="shortcut icon" href="/favicon.ico")
