--- a/etc/web-components/TopNavBarPrivate.slim
+++ b/etc/web-components/TopNavBarPrivate.slim
@@ -15,6 +15,8 @@ header.navbar.navbar-default.navbar-fixed-top
 				== pageLink(MyPodsPage#,	"My Pods")
 
 			ul.nav.navbar-nav.navbar-right
+				li;	a (href="/pods/feed.atom" title="Pod Repository RSS Feed")
+					i.fa.fa-rss-square.fa-lg.rss
 				li.dropdown
 					a.dropdown-toggle (href="#" data-toggle="dropdown" role="button" aria-expanded="false")	Help
 						span.caret
