Pod download links

--- a/etc/less/pages/podSummaryPage.less
+++ b/etc/less/pages/podSummaryPage.less
@@ -20,4 +20,9 @@
 		//	right:				@padding-large-horizontal + 8px;
 		//}
 	}
+	
+	.downloadPod {
+		.lead;
+		margin:		(@padding-large-vertical *2) (@padding-large-horizontal *2);
+	}
 }
