--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -7,9 +7,7 @@
 @import "fandoc.less";
 @import "syntax.less";
 
-//@import "components/layout.less";
-//@import "components/topNavBar.less";
+@import "components/fatFooter.less";
 
-//@import "pages/indexPage.less";
 @import "pages/podSummaryPage.less";
 
