Fanny the Fantom

--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -8,6 +8,7 @@
 @import "syntax.less";
 
 @import "components/fatFooter.less";
+@import "components/topNavBar.less";
 
 @import "pages/podSummaryPage.less";
 
