--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -7,7 +7,9 @@ header.navbar.navbar-default.navbar-fixed-top
 				span.icon-bar
 				span.icon-bar
 				span.icon-bar
-			a.navbar-brand (href="${pageUrl(IndexPage#)}")	Fantom Pod Repo
+			a.navbar-brand (href="${pageUrl(IndexPage#)}")
+				-- app.renderFannyTheFantom		
+				span.name Pod Repo
 
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
@@ -15,7 +17,7 @@ header.navbar.navbar-default.navbar-fixed-top
 
 
 			ul.nav.navbar-nav.navbar-right
-				li;	a (href="/pods/feed.atom" title="Pod Repository RSS Feed")
+				li.hidden-xs;	a (href="/pods/feed.atom" title="Pod Repository RSS Feed")
 					i.fa.fa-rss-square.fa-lg.rss
 				li.dropdown
 					a.dropdown-toggle (href="#" data-toggle="dropdown" role="button" aria-expanded="false")	Help
