--- a/etc/less/global.less
+++ b/etc/less/global.less
@@ -111,7 +111,7 @@ li > div.syntax {
 
 .externalLink:after {
 	content:		"\A0\F08E";
-	font-family:	"FontAwesome";
+	font-family:	"fonticons";
 	font-size:		90%;
 }
 
