--- a/etc/less/sections/fandoc.less
+++ b/etc/less/sections/fandoc.less
@@ -5,6 +5,10 @@
 		text-decoration:	underline;
 	}
 
+	h2, h3 {
+		margin-top:			@line-height-computed * 2;
+	}
+
 	table.table {
 		width:	auto;
 	}
