--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -3,12 +3,15 @@
 @import "bootstrap-3.3.4/theme.less";
 
 @import "global.less";
-@import "api.less";
-@import "fandoc.less";
-@import "syntax.less";
+
+@import "fonts/fonticons.less";
+@import "fonts/fontawesome.less";
+
+@import "sections/api.less";
+@import "sections/fandoc.less";
+@import "sections/syntax.less";
 
 @import "components/fatFooter.less";
 @import "components/topNavBar.less";
 
 @import "pages/podSummaryPage.less";
-
