--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -6,6 +6,8 @@
 		p.small Libraries for the Fantom Language are called <i>pods</i>. 
 		p.small This is a repository of pods.
 		
+	p	&nbsp;
+
 	div.row
 		div.col-sm-6.col-md-4
 			h2.text-center	Publish Pods
@@ -15,15 +17,15 @@
 				li	<b>Private</b> - only you can access them
 
 		div.col-sm-6.col-md-4
+			h2.text-center	Read Pods
+			p	This site contains both: 
+			ul
+				li	<b>User Guides</b> and
+				li	<b>API</b> documentation.
+
+		div.col-sm-6.col-md-4
 			h2.text-center	Download Pods
 			p	Pods may be: 
 			ul
 				li	<b>Downloaded</b> manually on this website or 
 				li	<b>Installed</b> with the <a href="http://fantom.org/doc/docFanr/Tool">fanr</a> command line tool.
-
-		div.col-sm-6.col-md-4
-			h2.text-center	View Pod Docs
-			p	This site contains both: 
-			ul
-				li	<b>User Guides</b> and
-				li	<b>API</b> documentation.
