--- a/etc/web-pages/my/MyPods.html.slim
+++ b/etc/web-pages/my/MyPods.html.slim
@@ -22,7 +22,7 @@
 					th	Summary
 					th	Documentation
 					th.text-nowrap.text-centre	Doc Errs
-					th	Actions
+					th.text-centre	Actions
 				-- allPods.each |pod|
 					tr.${pod.ownerId == loggedInUser._id ? "" : "bg-danger"}
 						td.text-nowrap;	a (href="${podSummaryUrl(pod)}") ${pod.name}
@@ -37,10 +37,8 @@
 							-- else
 								a (href="${podValidateUrl(pod)}" title="Goto pod validate page")
 									span.badge.label.label-warning ${pod.invalidLinks.size}	
-						td.text-nowrap
-							a.btn.btn-xs.btn-primary (href="${podEditUrl(pod)}" title="Goto pod edit page") Edit
-							| &nbsp;&nbsp;
-							a.btn.btn-xs.btn-danger (href="${podDeleteUrl(pod)}" title="Goto pod deletion page") &times;
+						td.text-centre.text-nowrap
+							a.btn.btn-xs.btn-primary (href="${podEditUrl(pod)}") &nbsp;&nbsp;Edit Pod&nbsp;&nbsp;
 
 
 
